--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=techcorp3
+server.port=8080
+spring.application.name=employee-management-api
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 # Api URL for fetching user data
 app.api.url=https://jsonplaceholder.typicode.com/users
