Added view controllers and Thymeleaf views

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ app.api.url=https://jsonplaceholder.typicode.com/users
 app.import.csv-file=employees-broken.csv
 
 logging.level.root=INFO
+
+# Thymeleaf settings
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
